Updated gradle to V8