@@ -1,20 +1,44 @@
-import arc.files.*
-import arc.util.*
-import arc.util.serialization.*
-import ent.*
-import java.io.*
+import arc.files.Fi
+import arc.util.OS
+import arc.util.serialization.Jval
+import ent.EntityAnnoExtension
+import java.io.FileOutputStream
+import java.util.jar.JarEntry
+import java.util.jar.JarFile
+import java.util.jar.JarOutputStream
 
 buildscript{
-	val arcVersion: String by project
-	val useJitpack = property("mindustryBE").toString().toBooleanStrict()
+	val mindustryVersion = providers.gradleProperty("mindustryVersion").get()
+	val mindustry = if(mindustryVersion == "be") "MindustryBuilds" else "Mindustry"
 
 	dependencies{
-		classpath("com.github.Anuken.Arc:arc-core:$arcVersion")
+		classpath("Anuken:$mindustry:$mindustryVersion")
+	}
+
+	configurations.configureEach{
+		// Resolve the correct Mindustry dependency.
+		resolutionStrategy.eachDependency{
+			if(requested.group == "Anuken" && requested.name.startsWith("Mindustry")){
+				useTarget("Anuken:$mindustry:$mindustryVersion")
+			}
+		}
 	}
 
 	repositories{
-		if(!useJitpack) maven("https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository")
-		maven("https://jitpack.io")
+		ivy{
+			url = uri("https://github.com")
+			patternLayout{
+				artifact(when(mindustryVersion){
+					"latest" -> "Anuken/Mindustry/releases/latest/download/dependencies.jar"
+					"be" -> "Anuken/MindustryBuilds/releases/download/master/latest.jar"
+					else -> "Anuken/Mindustry/releases/download/[revision]/dependencies.jar"
+				})
+				metadataSources{artifact()}
+			}
+			content{
+				includeVersion("Anuken", mindustry, mindustryVersion)
+			}
+		}
 	}
 }
 
@@ -23,32 +47,21 @@ plugins{
 	id("com.github.GglLfr.EntityAnno") apply false
 }
 
-val arcVersion: String by project
-val mindustryVersion: String by project
-val mindustryBEVersion: String by project
-val entVersion: String by project
+val mindustryVersion = providers.gradleProperty("mindustryVersion").get()
+val entVersion = providers.gradleProperty("entVersion").get()
 
-val modName: String by project
-val modArtifact: String by project
-val modFetch: String by project
-val modGenSrc: String by project
-val modGen: String by project
+val mindustry = if(mindustryVersion == "be") "MindustryBuilds" else "Mindustry"
+val modName = providers.gradleProperty("modName").get()
+val modArtifact = providers.gradleProperty("modArtifact").get()
+val modFetch = providers.gradleProperty("modFetch").get()
+val modGenSrc = providers.gradleProperty("modGenSrc").get()
+val modGen = providers.gradleProperty("modGen").get()
 
-val androidSdkVersion: String by project
-val androidBuildVersion: String by project
-val androidMinVersion: String by project
+val modVersion = providers.gradleProperty("modVersion").get()
+val alpha = providers.gradleProperty("alpha").get()
 
-val modVersion: String by project
-val alpha: String by project
-
-val useJitpack = property("mindustryBE").toString().toBooleanStrict()
-
-fun arc(module: String): String{
-	return "com.github.Anuken.Arc$module:$arcVersion"
-}
-
-fun mindustry(module: String): String{
-	return "com.github.Anuken.Mindustry$module:$mindustryVersion"
+fun mindustry(): String{
+	return "Anuken:$mindustry:$mindustryVersion"
 }
 
 fun entity(module: String): String{
@@ -59,53 +72,104 @@ allprojects{
 	apply(plugin = "java")
 	sourceSets["main"].java.setSrcDirs(listOf(layout.projectDirectory.dir("src"), layout.projectDirectory.dir("build/generated/source/kapt/main")))
 
+	dependencies{
+		abstract class TrimSources : TransformAction<TransformParameters.None>{
+			@get:InputArtifact
+			abstract val file: Provider<FileSystemLocation>
+
+			override fun transform(outputs: TransformOutputs){
+				val input = file.get().asFile
+				val classes = outputs.file(input.name)
+
+				JarFile(input).use{jar ->
+					val entries = jar.entries()
+					JarOutputStream(FileOutputStream(classes)).use{classes ->
+						for(entry in entries){
+							if(entry.name.endsWith(".java")) continue
+
+							classes.putNextEntry(JarEntry(entry.name))
+							jar.getInputStream(entry).use{it.copyTo(classes)}
+							classes.closeEntry()
+						}
+					}
+				}
+			}
+		}
+
+		registerTransform(TrimSources::class){
+			from.attribute(ArtifactTypeDefinition.ARTIFACT_TYPE_ATTRIBUTE, ArtifactTypeDefinition.JAR_TYPE)
+			to.attribute(ArtifactTypeDefinition.ARTIFACT_TYPE_ATTRIBUTE, "jar-stripped")
+		}
+	}
+
 	configurations.configureEach{
-		// Resolve the correct Mindustry dependency, and force Arc version.
+		// Resolve the correct Mindustry dependency.
 		resolutionStrategy.eachDependency{
-			if(useJitpack && requested.group == "com.github.Anuken.Mindustry"){
-				useTarget("com.github.Anuken.MindustryJitpack:${requested.module.name}:$mindustryBEVersion")
-			}else if(requested.group == "com.github.Anuken.Arc"){
-				useVersion(arcVersion)
+			if(requested.group == "Anuken" && requested.name.startsWith("Mindustry")){
+				useTarget("Anuken:$mindustry:$mindustryVersion")
 			}
 		}
 	}
 
-	dependencies{
-		// Downgrade Java 9+ syntax into being available in Java 8.
-		annotationProcessor(entity(":downgrader"))
+	configurations.matching{it.isCanBeResolved}.configureEach{
+		attributes{
+			attribute(ArtifactTypeDefinition.ARTIFACT_TYPE_ATTRIBUTE, "jar-stripped")
+		}
 	}
 
 	repositories{
+		// Use Ivy repository for Mindustry builds.
+		ivy{
+			url = uri("https://github.com")
+			patternLayout{
+				artifact(when(mindustryVersion){
+					"latest" -> "Anuken/Mindustry/releases/latest/download/dependencies.jar"
+					"be" -> "Anuken/MindustryBuilds/releases/download/master/latest.jar"
+					else -> "Anuken/Mindustry/releases/download/[revision]/dependencies.jar"
+				})
+				metadataSources{artifact()}
+			}
+			content{
+				includeVersion("Anuken", mindustry, mindustryVersion)
+			}
+		}
+
 		// Necessary Maven repositories to pull dependencies from.
+		mavenLocal()
 		mavenCentral()
 		maven("https://oss.sonatype.org/content/repositories/snapshots/")
 		maven("https://oss.sonatype.org/content/repositories/releases/")
 		maven("https://raw.githubusercontent.com/GglLfr/EntityAnnoMaven/main")
-
-		// Use Zelaux's non-buggy repository for release Mindustry and Arc builds.
-		if(!useJitpack) maven("https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository")
-		maven("https://jitpack.io")
 	}
 
 	tasks.withType<JavaCompile>().configureEach{
-		// Use Java 17+ syntax, but target Java 8 bytecode version.
-		sourceCompatibility = "17"
 		options.apply{
-			release = 8
 			compilerArgs.add("-Xlint:-options")
+			compilerArgs.add("-implicit:none")
+			compilerArgs.addAll(providers.gradleProperty("org.gradle.jvmargs").get()
+				.split(Regex("\\s+"))
+				.filter{it.startsWith("--add-opens")}
+				.map{"--add-exports=${it.substring("--add-opens=".length)}"}
+			)
 
 			isIncremental = true
+			isFork = false
 			encoding = "UTF-8"
 		}
+
+		sourceCompatibility = "17"
+		targetCompatibility = "17"
 	}
 }
 
 project(":"){
 	apply(plugin = "com.github.GglLfr.EntityAnno")
+
+	val localModName = modName
+	val localMindustryVersion = mindustryVersion
 	configure<EntityAnnoExtension>{
-		modName = project.properties["modName"].toString()
-		mindustryVersion = project.properties[if(useJitpack) "mindustryBEVersion" else "mindustryVersion"].toString()
-		isJitpack = useJitpack
+		modName = localModName
+		mindustryVersion = localMindustryVersion
 		revisionDir = layout.projectDirectory.dir("revisions").asFile
 		fetchPackage = modFetch
 		genSrcPackage = modGenSrc
@@ -117,14 +181,27 @@ project(":"){
 		compileOnly(entity(":entity"))
 		add("kapt", entity(":entity"))
 
-		compileOnly(mindustry(":core"))
-		compileOnly(arc(":arc-core"))
+		compileOnly(mindustry())
 	}
 
 	val jar = tasks.named<Jar>("jar"){
 		archiveFileName = "${modArtifact}Desktop-${modVersion + (if (alpha.toBoolean()) "-alpha" else "")}.jar"
 
-		val meta = layout.projectDirectory.file("$temporaryDir/mod.json")
+		// Deliberately check if the mod meta is actually written in HJSON, since, well, some people actually use
+		// it. But this is also not mentioned in the `README.md`, for the mischievous reason of driving beginners
+		// into using JSON instead.
+		val metaJson = layout.projectDirectory.file("mod.json")
+		val metaHjson = layout.projectDirectory.file("mod.hjson")
+
+		if(metaJson.asFile.exists() && metaHjson.asFile.exists()){
+			throw IllegalStateException("Ambiguous mod meta: both `mod.json` and `mod.hjson` exist.")
+		}else if(!metaJson.asFile.exists() && !metaHjson.asFile.exists()){
+			throw IllegalStateException("Missing mod meta: neither `mod.json` nor `mod.hjson` exist.")
+		}
+
+		val isJson = metaJson.asFile.exists()
+		val usedMeta = if(isJson) metaJson else metaHjson
+
 		from(
 			files(sourceSets["main"].output.classesDirs),
 			files(sourceSets["main"].output.resourcesDir),
@@ -132,30 +209,16 @@ project(":"){
 
 			files(layout.projectDirectory.dir("assets")),
 			layout.projectDirectory.file("icon.png"),
-			meta
+			usedMeta
 		)
 
 		metaInf.from(layout.projectDirectory.file("LICENSE"))
+
+		val localModName = modName
 		doFirst{
-			// Deliberately check if the mod meta is actually written in HJSON, since, well, some people actually use
-			// it. But this is also not mentioned in the `README.md`, for the mischievous reason of driving beginners
-			// into using JSON instead.
-			val metaJson = layout.projectDirectory.file("mod.json")
-			val metaHjson = layout.projectDirectory.file("mod.hjson")
-
-			if(metaJson.asFile.exists() && metaHjson.asFile.exists()){
-				throw IllegalStateException("Ambiguous mod meta: both `mod.json` and `mod.hjson` exist.")
-			}else if(!metaJson.asFile.exists() && !metaHjson.asFile.exists()){
-				throw IllegalStateException("Missing mod meta: neither `mod.json` nor `mod.hjson` exist.")
+			if(usedMeta.asFile.reader(Charsets.UTF_8).use{Jval.read(it)}.getString("name") != localModName) {
+				throw GradleException("Mod name mismatch in `${usedMeta.asFile.name}`; please synchronize with `gradle.properties`")
 			}
-
-			val isJson = metaJson.asFile.exists()
-			val map = (if(isJson) metaJson else metaHjson).asFile
-				.reader(Charsets.UTF_8)
-				.use{Jval.read(it)}
-
-			map.put("name", modName)
-			meta.asFile.writer(Charsets.UTF_8).use{file -> BufferedWriter(file).use{map.writeTo(it, Jval.Jformat.formatted)}}
 		}
 	}
 
@@ -166,39 +229,43 @@ project(":"){
 		val desktopJar = jar.flatMap{it.archiveFile}
 		val dexJar = File(temporaryDir, "Dex.jar")
 
+		val androidSdkVersion = providers.gradleProperty("androidSdkVersion").get()
+		val androidBuildVersion = providers.gradleProperty("androidBuildVersion").get()
+		val androidMinVersion = providers.gradleProperty("androidMinVersion").get()
+
+		val classpaths = configurations.compileClasspath.get().toList() + configurations.runtimeClasspath.get().toList()
+		val providers = project.providers
+
 		from(zipTree(desktopJar), zipTree(dexJar))
 		doFirst{
-			logger.lifecycle("Running `d8`.")
-			providers.exec{
-				// Find Android SDK root.
-				val sdkRoot = File(
-					OS.env("ANDROID_SDK_ROOT") ?: OS.env("ANDROID_HOME") ?:
-					throw IllegalStateException("Neither `ANDROID_SDK_ROOT` nor `ANDROID_HOME` is set.")
-				)
-	
-				// Find `d8`.
-				val d8 = File(sdkRoot, "build-tools/$androidBuildVersion/${if(OS.isWindows) "d8.bat" else "d8"}")
-				if(!d8.exists()) throw IllegalStateException("Android SDK `build-tools;$androidBuildVersion` isn't installed or is corrupted")
-	
-				// Initialize a release build.
-				val input = desktopJar.get().asFile
-				val command = arrayListOf("$d8", "--release", "--min-api", androidMinVersion, "--output", "$dexJar", "$input")
-	
-				// Include all compile and runtime classpath.
-				(configurations.compileClasspath.get().toList() + configurations.runtimeClasspath.get().toList()).forEach{
-					if(it.exists()) command.addAll(arrayOf("--classpath", it.path))
-				}
-	
-				// Include Android platform as library.
-				val androidJar = File(sdkRoot, "platforms/android-$androidSdkVersion/android.jar")
-				if(!androidJar.exists()) throw IllegalStateException("Android SDK `platforms;android-$androidSdkVersion` isn't installed or is corrupted")
-	
-				command.addAll(arrayOf("--lib", "$androidJar"))
-				if(OS.isWindows) command.addAll(0, arrayOf("cmd", "/c").toList())
-	
-				// Run `d8`.
-				commandLine(command)
-			}.result.get().rethrowFailure()
+			// Find Android SDK root.
+			val sdkRoot = File(
+				OS.env("ANDROID_SDK_ROOT") ?: OS.env("ANDROID_HOME")
+				?: throw IllegalStateException("Neither `ANDROID_SDK_ROOT` nor `ANDROID_HOME` is set.")
+			)
+
+			// Find `d8`.
+			val d8 = File(sdkRoot, "build-tools/$androidBuildVersion/${if(OS.isWindows) "d8.bat" else "d8"}")
+			if(!d8.exists()) throw IllegalStateException("Android SDK `build-tools;$androidBuildVersion` isn't installed or is corrupted")
+
+			// Initialize a release build.
+			val input = desktopJar.get().asFile
+			val command = arrayListOf("$d8", "--release", "--min-api", androidMinVersion, "--output", "$dexJar", "$input")
+
+			// Include all compile and runtime classpath.
+			classpaths.forEach{
+				if(it.exists()) command.addAll(arrayOf("--classpath", it.path))
+			}
+
+			// Include Android platform as library.
+			val androidJar = File(sdkRoot, "platforms/android-$androidSdkVersion/android.jar")
+			if(!androidJar.exists()) throw IllegalStateException("Android SDK `platforms;android-$androidSdkVersion` isn't installed or is corrupted")
+
+			command.addAll(arrayOf("--lib", "$androidJar"))
+			if(OS.isWindows) command.addAll(0, arrayOf("cmd", "/c").toList())
+
+			// Run `d8`.
+			providers.exec{commandLine(command)}.result.get().rethrowFailure()
 		}
 	}
 
